// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Home /> home renders a button 1`] = `
<View
  accessibilityRole="button"
  accessibilityStates={Array []}
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#007AFF",
            "fontSize": 18,
            "padding": 8,
            "textAlign": "center",
          },
          Object {
            "color": "#841584",
          },
        ]
      }
    >
      Submit
    </Text>
  </View>
</View>
`;

exports[`<Home /> home renders a text input box for names 1`] = `
<TextInput
  allowFontScaling={true}
  placeholder="Name"
  style={
    Object {
      "borderColor": "gray",
      "borderWidth": 1,
      "height": 40,
    }
  }
  underlineColorAndroid="transparent"
/>
`;

exports[`<Home /> home renders correctly 1`] = `
<View>
  <Text>
    Hello World!
  </Text>
  <TextInput
    allowFontScaling={true}
    placeholder="Name"
    style={
      Object {
        "borderColor": "gray",
        "borderWidth": 1,
        "height": 40,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    accessibilityRole="button"
    accessibilityStates={Array []}
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {},
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#007AFF",
              "fontSize": 18,
              "padding": 8,
              "textAlign": "center",
            },
            Object {
              "color": "#841584",
            },
          ]
        }
      >
        Submit
      </Text>
    </View>
  </View>
</View>
`;
